--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "docxtemplater": "^3.65.2",
     "file-saver": "^2.0.5",
     "formik": "^2.4.6",
-    "git": "^0.1.5",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.12.1",
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.4",
     "mammoth": "^1.11.0",
     "pizzip": "^3.2.0",
+    "pnpm": "^10.24.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
@@ -52,6 +52,6 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "vite": "^5.4.1"
+    "vite": "^6.4.1"
   }
 }
